--- a/Aula_03_Met_matematicos_ago_25_2020.ipynb
+++ b/Aula_03_Met_matematicos_ago_25_2020.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Aula_03_Met_matematicos_ago_25_2020.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEemTns7JiGInWJZKeHW3j",
+      "authorship_tag": "ABX9TyNCLEC+iYsP9zdlvUV261el",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,9 +31,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 84
+          "height": 151
         },
-        "outputId": "4817d212-4db5-460f-95ff-7cbb65da97da"
+        "outputId": "c9f40b60-9341-4ac8-d46f-7d3f9f3947b2"
       },
       "source": [
         "# Carregamento do local e do arquivo\n",
@@ -41,19 +41,23 @@
         "!git clone https://github.com/WFVieira-hub/Met_Matematicos # clonar do github\n",
         "%cd Met_Matematicos\n",
         "\n",
-        "##from Lista_func_NN import Lista\n",
-        "#w=Lista(5)\n",
-        "#print(w)\n"
+        "from Lista_func_NN import Lista\n",
+        "w=Lista(5)\n",
+        "print(w)\n"
       ],
-      "execution_count": 11,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'Met_Matematicos'...\n",
-            "fatal: could not read Username for 'https://github.com': No such device or address\n",
-            "[Errno 2] No such file or directory: 'Met_Matematicos'\n",
-            "/content\n"
+            "remote: Enumerating objects: 21, done.\u001b[K\n",
+            "remote: Counting objects: 100% (21/21), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (19/19), done.\u001b[K\n",
+            "remote: Total 21 (delta 8), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (21/21), done.\n",
+            "/content/Met_Matematicos/Met_Matematicos/Met_Matematicos\n",
+            "[[0, 1, 2, 3, 4], [0, 1, 2, 3, 4], [0, 1, 2, 3, 4], [0, 1, 2, 3, 4], [0, 1, 2, 3, 4]]\n"
           ],
           "name": "stdout"
         }
