--- a/Tarefa_01_Met_Num_01_set_2020.ipynb
+++ b/Tarefa_01_Met_Num_01_set_2020.ipynb
@@ -81,7 +81,7 @@
         "  return M,info\n",
         "      "
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -131,7 +131,56 @@
         "########################################################\n",
         "########################################################"
       ],
-      "execution_count": null,
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UFNwEz4ROrs6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def gauss(M,f):\n",
+        "    n = len(f)\n",
+        "    A = np.zeros((n,n+1))\n",
+        "    A[:,:-1] = M\n",
+        "    A[:,-1] = f\n",
+        "\n",
+        "    for i in range(0, n):\n",
+        "        # Search for maximum in this column\n",
+        "        maxEl = abs(A[i][i])\n",
+        "        maxRow = i\n",
+        "        for k in range(i + 1, n):\n",
+        "            if abs(A[k][i]) > maxEl:\n",
+        "                maxEl = abs(A[k][i])\n",
+        "                maxRow = k\n",
+        "\n",
+        "        # Swap maximum row with current row (column by column)\n",
+        "        for k in range(i, n + 1):\n",
+        "            tmp = A[maxRow][k]\n",
+        "            A[maxRow][k] = A[i][k]\n",
+        "            A[i][k] = tmp\n",
+        "\n",
+        "        # Make all rows below this one 0 in current column\n",
+        "        for k in range(i + 1, n):\n",
+        "            c = -A[k][i] / A[i][i]\n",
+        "            for j in range(i, n + 1):\n",
+        "                if i == j:\n",
+        "                    A[k][j] = 0\n",
+        "                else:\n",
+        "                    A[k][j] += c * A[i][j]\n",
+        "\n",
+        "    # Solve equation Ax=b for an upper triangular matrix A\n",
+        "    x = [0 for i in range(n)]\n",
+        "    for i in range(n - 1, -1, -1):\n",
+        "        x[i] = A[i][n] / A[i][i]\n",
+        "        for k in range(i - 1, -1, -1):\n",
+        "            A[k][n] -= A[k][i] * x[i]\n",
+        "    return x"
+      ],
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -143,32 +192,40 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "8b85fb47-be81-44a0-f725-770a910610e0"
+        "outputId": "41cd1015-af3d-4472-c7d1-d94228c8b571"
       },
       "source": [
         "# create the matrix A\n",
-        "A = np. array ([[0.9 ,0.3 ,0.1] ,[0.1 ,0.5 ,0.2] , [0.0 ,0.2 ,0.7]])\n",
+        "A = np. array ([[1 ,1 ,0,0],[-220 ,0 ,1,0] , [0 ,-0.3 ,0,1],[0,0,1,1]])\n",
         "\n",
         "# create the right-hand side\n",
-        "feed = np. array ([30.0 ,25.0 ,10.0])\n",
+        "feed = np. array ([1 ,0 ,0,1])\n",
         "\n",
         "M,info = LU(A,feed)\n",
         "x,info = BS(M)\n",
         "\n",
         "# print the solution\n",
         "print(x)\n",
+        "Ym=x[2];Xm=x[0];Yo=x[3];Xo=x[1]\n",
         "\n",
+        "B = np. array([[1,1,-1,0],[Ym,Xm,-0.1,0],[0,0,0.1,1],[Yo,Xo,-0.9,1]])\n",
+        "f1 =np.array([0,0,10,0])\n",
+        "\n",
+        "M1,info=LU(B,f1)\n",
+        "x,info = BS(M1)\n",
+        "#x = gauss(B,f1)\n",
+        "print(x)\n",
         "# check the solution\n",
-        "check_sol = np.dot(A,x)\n",
-        "print(check_sol) \n"
+        "#check_sol = np.dot(A,x)\n",
+        "#print(check_sol) \n"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[17.88461538 45.96153846  1.15384615]\n",
-            "[30. 25. 10.]\n"
+            "[0.00318616 0.99681384 0.70095585 0.29904415]\n",
+            "[1.38747554e+01 8.61252446e+01 1.00000000e+02 9.99200722e-14]\n"
           ],
           "name": "stdout"
         }
@@ -179,32 +236,17 @@
       "metadata": {
         "id": "EJRfkRN3_kTj",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 87
-        },
-        "outputId": "9aa8cbf0-e888-45f2-fea7-ecd5630f9651"
+        "colab": {}
       },
       "source": [
         "# \"Never invert a matrix explicitly unless your life depends on it...\"\n",
-        "y = np.linalg.inv(A)\n",
-        "sol = np.dot(y,feed)\n",
-        "print(sol)\n",
-        "print(A)"
+        "#y = np.linalg.inv(A)\n",
+        "#sol = np.dot(y,feed)\n",
+        "#print(sol)\n",
+        "#print(A)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[17.88461538 45.96153846  1.15384615]\n",
-            "[[0.9 0.3 0.1]\n",
-            " [0.1 0.5 0.2]\n",
-            " [0.  0.2 0.7]]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
