--- a/Mod_02_CLASS_02_NonLinear_Equation_Python_set_08_2020.ipynb
+++ b/Mod_02_CLASS_02_NonLinear_Equation_Python_set_08_2020.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Mod_02_CLASS_02_NonLinear_Equation_Python_set_08_2020.ipynb",
+      "name": "Copy of Mod_02_CLASS_02_NonLinear_Equation_Python_set_08_2020.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
@@ -71,7 +71,7 @@
         "    for i in range(n):\n",
         "      y[i] = f(x[i])\n",
         "      if(abs(y[i])<minimum_y):\n",
-        "        minimum_y=abs(y[i].copy())\n",
+        "        minimum_y=y[i].copy()\n",
         "        minimum_x=x[i].copy()\n",
         "\n",
         "    # Return x and y values\n",
@@ -88,9 +88,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
-        "outputId": "3b687a2b-e078-4aa5-cb7d-a36c3b68863a"
+        "outputId": "da7c28e8-eba2-493e-8084-fc3110825612"
       },
       "source": [
         "def f(x):\n",
@@ -105,7 +105,7 @@
         {
           "output_type": "stream",
           "text": [
-            "(3.0, 0.0)\n"
+            "(0.0, -9.0)\n"
           ],
           "name": "stdout"
         }
@@ -156,9 +156,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
-        "outputId": "2f597ee8-2a44-41c8-d57b-f3d57ba3ac4e"
+        "outputId": "ed495603-8d01-4240-d0c1-0608e4db68a7"
       },
       "source": [
         "def f(x):\n",
@@ -210,9 +210,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 51
         },
-        "outputId": "ba7cecf6-fa64-4cb4-e0a5-f91825388fbb"
+        "outputId": "dbffbf61-e61c-4e95-dd52-54be74b66c3f"
       },
       "source": [
         "def secant(f, x0, x1, eps):\n",
@@ -268,9 +268,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
-        "outputId": "859319ff-a844-4e08-8354-56e4cdbd57de"
+        "outputId": "f116705d-83ed-4a19-8101-266b179c94c1"
       },
       "source": [
         "def bisection(f, x_L, x_R, eps, return_x_list=False):\n",
