--- a/Problema_01_lista_BFGS.ipynb
+++ b/Problema_01_lista_BFGS.ipynb
@@ -32,7 +32,7 @@
         "import numpy  as np\n",
         "from scipy.optimize import minimize"
       ],
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -41,9 +41,9 @@
         "id": "FVxAOAAFLXNU"
       },
       "source": [
-        "Redlich-Kwong\n",
+        "Van der waals\n",
         "\n",
-        "- Calculo do Volume a 500 K e 18 atm"
+        "- Calculo do Volume a 450 K e 56 atm"
       ]
     },
     {
@@ -61,69 +61,47 @@
         "  pr=p/pc;\n",
         "  a = (27/64) * ((R ** 2 * Tc ** 2)/ pc);\n",
         "  b = (1/8) * (R * Tc / pc);\n",
-        "  Z = pv / ((p + (a / v ** 2)) * (v - b))\n",
+        "  Z = (p * v) / ((p + (a / v ** 2)) * (v - b))\n",
         "  return Z\n"
       ],
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IsridphGAxF9"
-      },
-      "source": [
-        "$P.V^3 - R.T.V^2 + (aRK - P.bRK^2 - R.T.bRK).V - aRK.bRK=0$\n",
-        "\n",
-        "$Tc=425.2$\n",
-        "\n",
-        "$Pc=37.5$\n",
-        "\n",
-        "$R=0.008206$\n",
-        "\n",
-        "$aRK= \\dfrac{0.42748(R.Tc)^2}{Pc.\\left(\\dfrac{Tc}{T}\\right)^{0.5}}$\n",
-        "\n",
-        "$bRK = 0.08664\\left(\\dfrac{R.Tc}{Pc}\\right)$\n",
-        "\n",
-        "\n"
-      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "XIC-e0jsJRVQ",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 212
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e8d416e-f18c-4cc4-92bf-9f9f3e416efa"
+        "outputId": "480c7aca-d7f6-48b2-a183-a21dcb873497"
       },
       "source": [
         "R = 0.08206;\n",
         "T = 450;\n",
         "p = 56;\n",
-        "v0 = R*T/p\n",
+        "v0 = 1\n",
         "v0=np.array([v0]) # initial guess of volume of gas\n",
         "res = minimize(Minimo, v0, method='BFGS')\n",
         "print(res)\n",
         "print(\"V(L/g.mol)=\",res.x)"
       ],
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "      fun: -18.93636048555553\n",
-            " hess_inv: array([[0.01457522]])\n",
-            "      jac: array([2.38418579e-07])\n",
-            "  message: 'Optimization terminated successfully.'\n",
-            "     nfev: 21\n",
-            "      nit: 6\n",
-            "     njev: 7\n",
-            "   status: 0\n",
-            "  success: True\n",
-            "        x: array([1.39521604])\n",
-            "V(m³)= [1.39521604]\n"
+            "      fun: -1.5490903631194555e-05\n",
+            " hess_inv: array([[8.95056677]])\n",
+            "      jac: array([-0.01410729])\n",
+            "  message: 'Desired error not necessarily achieved due to precision loss.'\n",
+            "     nfev: 187\n",
+            "      nit: 1\n",
+            "     njev: 60\n",
+            "   status: 2\n",
+            "  success: False\n",
+            "        x: array([0.00340395])\n",
+            "V(L/g.mol)= [0.00340395]\n"
           ],
           "name": "stdout"
         }
@@ -135,9 +113,8 @@
         "id": "HP7uAn8HL3Ep"
       },
       "source": [
-        "Peng-Robson\n",
-        "\n",
-        "Calculo do Volume a 500 K e 18 atm"
+        "Pr = 1, 2, 4, 10, and 20\n",
+        "Calculo do Volume a 46 K e 56 atm"
       ]
     },
     {
@@ -146,75 +123,107 @@
         "id": "6MMFK9F0LvVn"
       },
       "source": [
-        "def Minimo1(v):\n",
-        "  Tc = 425.2;\n",
-        "  pc = 37.5;\n",
+        "def Minimo1(v,pr):\n",
+        "  Tc = 405.5;\n",
+        "  pc = 111.3;\n",
         "  R = 0.08206;\n",
-        "  T = 500;\n",
-        "  p = 18; \n",
-        "  acentric = 0.193;\n",
-        "  mPR = 0.37363 + (1.54226 - 0.26992*acentric)*acentric;\n",
-        "  alphaPR = (1 + mPR *(1-(T/Tc)**0.5)) ** 2;\n",
-        "  aPR = 0.45724 * alphaPR * (R * Tc) ** 2 / pc;\n",
-        "  bPR = 0.07780 * (R * Tc / pc);\n",
-        "  Z=p*v**3 + (bPR*p - R*T)*v**2 + (aPR - p*bPR**2 - R*T*bPR)*v + (p*bPR**3 + R*T*bPR**2-aPR*bPR)\n",
+        "  T = 450;\n",
+        "  p = 56; \n",
+        "  #pr= 1;\n",
+        "  a = (27/64) * ((R ** 2 * Tc ** 2 * pr)/ p);\n",
+        "  b = (1/8) * (R * Tc * pr / p);\n",
+        "  Z = (p * v) / ((p + (a / v ** 2)) * (v - b))\n",
         "  return Z"
       ],
-      "execution_count": null,
+      "execution_count": 73,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8wgKHNNxMy26"
-      },
-      "source": [
-        "$\\beta=0.193$\n",
-        "\n",
-        "$\\mu_{PR} = 0.37363 + (1.54226 - 0.26992\\beta).\\beta$\n",
-        "\n",
-        "$\\alpha_{PR} = 1 + \\mu_{PR}.\\left(1-\\left(\\dfrac{T}{Tc}\\right)^{0.5}\\right)^2$\n",
-        "\n",
-        "$a_{PR} = 0.45724 . \\dfrac{\\alpha_{PR}.(R.Tc)^2}{Pc}$\n",
-        "\n",
-        "$b_{PR} = 0.07780 . \\left(\\dfrac{R . Tc}{Pc}\\right)$\n",
-        "\n",
-        "$P.V^3+(b_{PR}.P - R.T).V^2+(a_{PR} - P.b_{PR}^2 - R.T.b_{PR}).V  + (P.b_{PR}^3 + R.T.b_{PR}^2 - a_{PR}.b_{PR}) = 0$"
-      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "1Kkhs95VQ71Z",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 212
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5e0e2391-e1bc-4e31-8f25-c9cf79d287da"
+        "outputId": "a55873d0-1459-4f5d-a3f6-512daf90c0f3"
       },
       "source": [
-        "v0 = R*T/p\n",
-        "v0=np.array([v0]) # initial guess of volume of gas\n",
-        "res = minimize(Minimo1, v0, method='BFGS')\n",
-        "print(res)\n",
-        "print(\"V(m³)=\",res.x)"
+        "pr = [1, 2, 4, 10, 20]\n",
+        "\n",
+        "for i in [1, 2, 4, 10, 20]:\n",
+        "  pr=i\n",
+        "  v0 = pr\n",
+        "  v0=np.array([v0]) # initial guess of volume of gas\n",
+        "  res[i] = minimize(Minimo1, v0, pr, method='BFGS')\n",
+        "  print(pr,v0)\n",
+        "  print(res[i])\n",
+        "  print(\"V(L/g.mol)=\",res[i].x)"
       ],
-      "execution_count": null,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "      fun: -15.136519900513449\n",
-            " hess_inv: array([[0.0155671]])\n",
-            "      jac: array([-2.38418579e-06])\n",
+            "1 [1]\n",
+            "      fun: 3.182447698256102e-10\n",
+            " hess_inv: array([[5.75049161]])\n",
+            "      jac: array([-6.26654302e-06])\n",
             "  message: 'Optimization terminated successfully.'\n",
-            "     nfev: 18\n",
-            "      nit: 5\n",
-            "     njev: 6\n",
+            "     nfev: 51\n",
+            "      nit: 11\n",
+            "     njev: 17\n",
             "   status: 0\n",
             "  success: True\n",
-            "        x: array([1.32974826])\n",
-            "V(m³)= [1.32974826]\n"
+            "        x: array([-0.00015224])\n",
+            "V(L/g.mol)= [-0.00015224]\n",
+            "2 [2]\n",
+            "      fun: 5.609632782713824e-10\n",
+            " hess_inv: array([[11.99542652]])\n",
+            "      jac: array([-5.76104772e-06])\n",
+            "  message: 'Optimization terminated successfully.'\n",
+            "     nfev: 69\n",
+            "      nit: 10\n",
+            "     njev: 23\n",
+            "   status: 0\n",
+            "  success: True\n",
+            "        x: array([-0.00029191])\n",
+            "V(L/g.mol)= [-0.00029191]\n",
+            "4 [4]\n",
+            "      fun: 1.001608379770992\n",
+            " hess_inv: array([[2963745.72087552]])\n",
+            "      jac: array([-8.68737698e-06])\n",
+            "  message: 'Optimization terminated successfully.'\n",
+            "     nfev: 48\n",
+            "      nit: 9\n",
+            "     njev: 16\n",
+            "   status: 0\n",
+            "  success: True\n",
+            "        x: array([182.99355245])\n",
+            "V(L/g.mol)= [182.99355245]\n",
+            "10 [10]\n",
+            "      fun: 1.0025087031140056\n",
+            " hess_inv: array([[4881810.96757648]])\n",
+            "      jac: array([-8.46385956e-06])\n",
+            "  message: 'Optimization terminated successfully.'\n",
+            "     nfev: 51\n",
+            "      nit: 12\n",
+            "     njev: 17\n",
+            "   status: 0\n",
+            "  success: True\n",
+            "        x: array([294.79917305])\n",
+            "V(L/g.mol)= [294.79917305]\n",
+            "20 [20]\n",
+            "      fun: 1.0038518144732482\n",
+            " hess_inv: array([[5393975.57473548]])\n",
+            "      jac: array([-9.983778e-06])\n",
+            "  message: 'Optimization terminated successfully.'\n",
+            "     nfev: 51\n",
+            "      nit: 12\n",
+            "     njev: 17\n",
+            "   status: 0\n",
+            "  success: True\n",
+            "        x: array([385.14129513])\n",
+            "V(L/g.mol)= [385.14129513]\n"
           ],
           "name": "stdout"
         }
